--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About Me</h3>
 
 <p>As a California native with a determined mindset, embracing the idea of "work hard, play hard" comes naturally to me. I am a recent graduate of El Segundo High School, and will be attending Cal Poly, San Luis Obispo, in the fall to study Applied Mathematics. I participated in my school's band and robotics teams, maintained above a 4.0 GPA, and taught myself Italian, HTML, and CSS on the side. On my free time I enjoy listening to music, hanging out with friends, learning new skills, browsing the Internet, and going to new places to try new things.</p>
-<img src= "https://scontent-b.xx.fbcdn.net/hphotos-prn1/t1.0-9/q71/s720x720/10014570_1446586955579119_1305852648_n.jpg"/>
-<img src= "https://scontent-a.xx.fbcdn.net/hphotos-prn2/t1.0-9/10169336_10201765018942962_5620805173383558781_n.jpg"/>
+<img id="pic1" src= "https://scontent-b.xx.fbcdn.net/hphotos-prn1/t1.0-9/q71/s720x720/10014570_1446586955579119_1305852648_n.jpg"/>
+<img id="pic2" src= "https://scontent-a.xx.fbcdn.net/hphotos-prn2/t1.0-9/10169336_10201765018942962_5620805173383558781_n.jpg"/>
       </section>
 
     </div>
