--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>Michaelynn Welther</h1>
           <p>Freelance Tutor. Student. Beginning Web Developer.</p>
           <hr>
-          <span class="credits left">View <a href="https://github.com/mickywelther">mickywelther's</a> github!</span>
+          <!--<span class="credits left">View <a href="https://github.com/mickywelther">mickywelther's</a> github!</span>-->
         </div>
 
         <h3>
