--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-<div id="footer"> <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png">
+<div id="footer"> <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png"/>
   <span>More to come soon!</span>
 </div>
     
