--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-<div id="footer"> <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png"/>
-  <span>More to come soon!</span>
+<div id="footer"> 
+  <span>More to come soon!
+    <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png"/>
+  </span>
 </div>
     
   </body>
