--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-  <body>
+  <body background="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png">
       <!--<div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/mickywelther">View On GitHub</a></li>
         </nav>
       </div><!-- end header -->
-
     <div class="wrapper">
 
       <section>
@@ -50,9 +49,6 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-<div id="footer"> 
-    <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png"/>
-</div>
     
   </body>
 </html>
