--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-  <body background="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png">
+  <body background="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png" bgproperties="fixed">
       <!--<div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/mickywelther">View On GitHub</a></li>
