--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <div class=footer>
    <style>
-     img.footer
+     div.footer
         {
         position:fixed;
         bottom:30px;
