--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h1>Michaelynn Welther</h1>
           <p>Freelance Tutor. Student. Beginning Web Developer.</p>
           <hr>
-          <span class="credits left"><a href="https://github.com/mickywelther">mickywelther's</a> github!</span>
+          <span class="credits left"><a href="http://mickywelther.github.io/education">Education</a></span>
         </div>
 
         <h2>
