--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
           <h1>Michaelynn Welther</h1>
           <p>Freelance Tutor. Student. Beginning Web Developer.</p>
           <hr>
-          <span class="credits left"><a href="http://mickywelther.github.io/education">Education</a></span>
+          <span class="credits left">
+            <a href="http://mickywelther.github.io/education">Education</a>
+            <a href="http://mickywelther.github.io/photos">Photos</a>
+            <a href="http://mickywelther.github.io/CATS">CATS</a>
+            </span>
         </div>
 
         <h2>
