--- a/education.html
+++ b/education.html
@@ -21,10 +21,31 @@
           <h1>Academic Background</h1>
         </div>
 
-        <h2>
-<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>High School</h2>
+        <h2 name=HighSchool>
+          <!--<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>-->
+        El Segundo High School</h2>
+          <ul>
+            <li>Graduated with a 4.12 GPA in the top 13% of the Class</li>
+            <li>AP Scholar Award (2013)</li>
+            <li>Principal's Honor Roll every semester</li>
+            <li>Colorguard (Captain)</li>
+            <li>Robotics (Secretary)</li>
+            <li>Concert Trombone</li>
+            <li>Roller Coaster Project (Project Manager, Mentor)</li>
+            <li>VEX Robotics Mentor</li>
+            <li>Teacher's Assistant</li>
+          </ul> 
     
-<h2 class="Higher Education">Higher Education</h2>
+      <h2 class="Higher Education">Higher Education</h2>
+        <h3>Loyola Marymount University</h3>
+          <ul>
+           <li>Took Calculus I & II (Math 131 & 132)</li>
+          </ul>
+        <h3>El Camino College</h3>
+          <ul>
+            <li>Geometry (Summer 2009)</li>
+            <li>US History, 1877-Present (Summer 2012)</li>
+          </ul>
       </section>
 
     </div>
