--- a/education.html
+++ b/education.html
@@ -37,6 +37,10 @@
           </ul> 
     
       <h2 class="Higher Education">Higher Education</h2>
+        <h3>Cal Poly, San Luis Obispo</h3>
+          <ul>
+            <li>Meep</li>
+          </ul>
         <h3>Loyola Marymount University</h3>
           <ul>
            <li>Took Calculus I & II (Math 131 & 132)</li>
