--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <title>Academic Background</title>
-    <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
+    <link rel="stylesheet" href="stylesheets/educationcss.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
