--- a/education.html
+++ b/education.html
@@ -54,6 +54,14 @@
 
     </div>
     <div name="calpolylogo">
+    <style>
+      div.calpolylogo
+        {
+        position: fixed;
+        bottom:5 px;
+        right:450px;
+         }
+      </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>    
 </html>
