--- a/education.html
+++ b/education.html
@@ -58,7 +58,7 @@
       div.calpolylogo
         {
         position: fixed;
-        bottom:5 px;
+        top:5 px;
         right:450px;
          }
       </style>
