--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    </style>
       <img src="http://www.clker.com/cliparts/x/e/E/B/7/q/flower-scroll-break-hi.png"/>
     </div>
-    <div class="seniorspot">
+    <div class=seniorspot>
       <style>
       div.seniorspot
         {
