--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
       </section>
 
     </div>
-    <div name=calpolylogo>
+    <div class="calpolylogo">
     <style>
       div.calpolylogo
         {
