--- a/education.html
+++ b/education.html
@@ -58,10 +58,13 @@
       div.calpolylogo
         {
         position: fixed;
-        top:5 px;
+        top:0px;
         right:450px;
+        z-index: -1;
          }
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>    
+    
+    <img
 </html>
