--- a/education.html
+++ b/education.html
@@ -59,12 +59,13 @@
         {
         position: fixed;
         top:0px;
-        right:450px;
+        right:500px;
         z-index: -1;
          }
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>    
     
-    <img
+    <img class="imgs2" src="http://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t1.0-9/1606972_10202033178526784_3965048437773203566_n.jpg"/>
+    <img class="imgs1" src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/t1.0-9/10308771_10202033176126724_3414656891741251262_n.jpg"/>
 </html>
