--- a/education.html
+++ b/education.html
@@ -65,7 +65,10 @@
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>    
-</body>
-    <img class="imgs2" src="http://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t1.0-9/1606972_10202033178526784_3965048437773203566_n.jpg"/>
-    <img class="imgs1" src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/t1.0-9/10308771_10202033176126724_3414656891741251262_n.jpg"/>
+  <div class="imgs2">
+    <img src="http://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t1.0-9/1606972_10202033178526784_3965048437773203566_n.jpg"/>
+  </div>
+  <div class="imgs1">
+    <img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/t1.0-9/10308771_10202033176126724_3414656891741251262_n.jpg"/>
+  </div>
 </html>
