--- a/education.html
+++ b/education.html
@@ -65,10 +65,28 @@
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>    
-  <div class="imgs2">
+  <div class=imgs2>
+    <style>
+      div.imgs2
+        {
+        position: absolute;
+        top:0px;
+        right:5px;
+        z-index: -1;
+         }
+      </style>
     <img src="http://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t1.0-9/1606972_10202033178526784_3965048437773203566_n.jpg"/>
   </div>
-  <div class="imgs1">
+  <div class=imgs1>
+    <style>
+      div.imgs1
+        {
+        position: absolute;
+        top:0px;
+        left:5px;
+        z-index: -1;
+         }
+      </style>
     <img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/t1.0-9/10308771_10202033176126724_3414656891741251262_n.jpg"/>
   </div>
 </html>
