--- a/education.html
+++ b/education.html
@@ -64,7 +64,19 @@
          }
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
-    </div>    
+    </div>   
+    <div class="ESHSLOGO">
+      <style>
+      div.ESHSLOGO
+        {
+        position: fixed;
+        bottom:150px;
+        right:500px;
+        z-index: -1;
+         }
+      </style>
+      <a href="http://www.elsegundohigh.org"><img src="http://www.b1selfshop.com/skin/frontend/default/default-gvc/images/logos/logo.png"/></a>
+    </div>
   <div class=imgs2>
     <style>
       div.imgs2
