--- a/education.html
+++ b/education.html
@@ -65,18 +65,20 @@
       </style>
       <a href="http://www.calpoly.edu"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/d/d9/CalPoly_Seal.svg/268px-CalPoly_Seal.svg.png"/></a>
     </div>   
-    <div class="ESHSLOGO">
+    
+    <div class=ESHSLOGO>
       <style>
       div.ESHSLOGO
         {
         position: fixed;
-        bottom:150px;
+        top:600px;
         right:500px;
         z-index: -1;
          }
       </style>
       <a href="http://www.elsegundohigh.org"><img src="http://www.b1selfshop.com/skin/frontend/default/default-gvc/images/logos/logo.png"/></a>
     </div>
+    
   <div class=imgs2>
     <style>
       div.imgs2
@@ -101,4 +103,5 @@
       </style>
     <img src="https://scontent-b.xx.fbcdn.net/hphotos-prn2/t1.0-9/10308771_10202033176126724_3414656891741251262_n.jpg"/>
   </div>
+  </body>
 </html>
