--- a/education.html
+++ b/education.html
@@ -72,7 +72,7 @@
         {
         position: fixed;
         top:600px;
-        right:500px;
+        right:center;
         z-index: -1;
          }
       </style>
