--- a/education.html
+++ b/education.html
@@ -59,7 +59,7 @@
         {
         position: fixed;
         top:0px;
-        right:500px;
+        right:center;
         z-index: -1;
          }
       </style>
@@ -71,7 +71,7 @@
       div.ESHSLOGO
         {
         position: fixed;
-        top:600px;
+        top:700px;
         right:center;
         z-index: -1;
          }
