--- a/education.html
+++ b/education.html
@@ -59,7 +59,7 @@
         {
         position: fixed;
         top:0px;
-        right:center;
+        right:550px;
         z-index: -1;
          }
       </style>
