--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <p>Freelance Tutor. Student. Beginning Web Developer.</p>
           <hr>
           <span class="credits left">
-            <a href="http://mickywelther.github.io/education">Education</a>
-            <a href="http://mickywelther.github.io/photos">Photos</a>
-            <a href="http://mickywelther.github.io/CATS">CATS</a>
+            <a href="http://mickywelther.github.io/education"><h4>Education</h4></a>
+            <a href="http://mickywelther.github.io/photos"><h4>MEEP</h4></a>
+            <a href="http://mickywelther.github.io/CATS"><h4>CATS</h4></a>
             </span>
         </div>
 
