--- a/education.html
+++ b/education.html
@@ -20,6 +20,12 @@
         <div id="title">
           <h1>Academic Background</h1>
         </div>
+        <span class="credits left">
+            <a href="http://mickywelther.github.io/index">Home</a>
+            <a href="http://mickywelther.github.io/education"><h4>Education</h4></a>
+            <a href="http://mickywelther.github.io/photos"><h4>MEEP</h4></a>
+            <a href="http://mickywelther.github.io/CATS"><h4>CATS</h4></a>
+         </span>
 
         <h2 name=HighSchool>
           <!--<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>-->
