--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <h2>
 <a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About Me</h2>
 
-<p>As a California native with a determined mindset, embracing the idea of "work hard, play hard" comes naturally to me. I am a recent graduate of El Segundo High School, and will be attending Cal Poly, San Luis Obispo, in the fall to study Applied Mathematics. I participated in my school's band and robotics teams, maintained above a 4.0 GPA, and learned Italian, HTML, and CSS on the side. On my free time I enjoy listening to music, hanging out with friends, learning new skills (such as DIY tech and beauty), browsing the Internet, and going to new places to try new things.</p>
+<p>As a California native with a determined mindset, embracing the idea of "work hard, play hard" comes naturally to me. I am a recent graduate of El Segundo High School, and will be attending Cal Poly, San Luis Obispo in the fall to study Applied Mathematics. I am a strong proponent of self-learning through initiative and experience. To encourage that ideal I have tutored elementary through college students, mentored for the Roller Coaster Project, and mentored middle school students in VEX robotics. </p>
+<p>When I'm done being a student/teacher for the day, you can find me napping, driving around LA with my friends, messing around in the robotics lab (or working on a robot/event), practicing trombone (rare though), checking my Facebook/Twitter/Email, or raiding my friends' pools. I manage to keep myself busy with something though, so the amount of free time I get can vary from none to some week to week. </p>
 <img id="pic1" src= "https://scontent-b.xx.fbcdn.net/hphotos-prn1/t1.0-9/q71/s720x720/10014570_1446586955579119_1305852648_n.jpg"/>
   <p class="caption">Working on the robot at the 2014 FRC LA Regional.</p>
 <img id="pic2" src= "https://scontent-a.xx.fbcdn.net/hphotos-prn2/t1.0-9/10169336_10201765018942962_5620805173383558781_n.jpg"/>
