--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <h1>Michaelynn Welther</h1>
           <p>Freelance Tutor. Student. Beginning Web Developer.</p>
           <hr>
+          <h4><a href="http://mickywelther.github.io/education">Education</a> <a href="http://mickywelther.github.io/thoughts">Thoughts</a></h4>
         </div>
 
         <h2>
