--- a/education.html
+++ b/education.html
@@ -25,9 +25,10 @@
           <!--<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>-->
         El Segundo High School</h2>
           <ul>
+            <h3>Achievements</h3>
             <li>Graduated with a 4.12 GPA in the top 13% of the Class</li>
-            <li>AP Scholar Award (2013)</li>
-            <li>Principal's Honor Roll every semester</li>
+            <li>AP Scholar</li>
+            <li>Principal's Honor Roll</li>
             <li>Colorguard (Captain)</li>
             <li>Robotics (Secretary)</li>
             <li>Concert Trombone</li>
@@ -35,6 +36,13 @@
             <li>VEX Robotics Mentor</li>
             <li>Teacher's Assistant</li>
           </ul> 
+          <ul><h3>Scholarships/Honors</h3>
+            <li>Masonic Lodge Doolittle Memorial Scholarship (2014)</li>
+            <li>ES Seniors Club Scholarship (2014)</li>
+            <li>Richmond St. Elementary Blue Butterfly Scholarship (2014)</li>
+            <li>Spanish Biliteracy Seal (2014)</li>
+            <li>Most Dependable Member Award (Robotics 2013)</li>
+          </ul>
     
       <h2 class="Higher Education">Higher Education</h2>
         <h3>Cal Poly, San Luis Obispo</h3>
