--- a/thoughts.html
+++ b/thoughts.html
@@ -14,4 +14,12 @@
         <div id="title">
           <h1>Personal Thoughts</h1>
   </div>
+  <h2>June 7th, 2014</h2>
+    <p>These past four years have been wonderful, and I leave the high school with no regrets. You are lucky to go to El Segundo High, 
+    if you hate this wonderful high school, then I advise you to take part in more activities, be open to other viewpoints, don't be scared of 
+    having fun. High school isn't about being perfect, it's about finding who YOU are, and exenuating yourself to see how successful you can be 
+    among diverse crowds. Cliques do not exist if you forget about them, perfect grades do not matter if you understand the value of education, 
+    and haters do not matter if you can love who you are and stay confident with your decisions. I am proud of how I've grown as a person, all 
+    it took was opening my mind. My one big piece of advice: Don't ever demand gratitude or apologies, demand yourself. Thank you everyone for 
+    having an influence on me in some way, small or large. You are truly wonderful, and I wish you all the best in your future ventures.</p>
 </html>
