--- a/thoughts.html
+++ b/thoughts.html
@@ -16,7 +16,7 @@
   </div>
   <h2>June 7th, 2014</h2>
     <p>These past four years have been wonderful, and I leave the high school with no regrets. You are lucky to go to El Segundo High, 
-    if you hate this wonderful high school, then I advise you to take part in more activities, be open to other viewpoints, don't be scared of 
+    if you hate this wonderful high school, then I advise you to take part in more activities, be open to other viewpoints, and don't be scared of 
     having fun. High school isn't about being perfect, it's about finding who YOU are, and exenuating yourself to see how successful you can be 
     among diverse crowds. Cliques do not exist if you forget about them, perfect grades do not matter if you understand the value of education, 
     and haters do not matter if you can love who you are and stay confident with your decisions. I am proud of how I've grown as a person, all 
