--- a/thoughts.html
+++ b/thoughts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-  <title>Academic Background</title>
+  <title>Thoughts from the Fortress of Solitude</title>
     <link rel="stylesheet" href="stylesheets/thoughtscss.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
