--- a/thoughts.html
+++ b/thoughts.html
@@ -13,6 +13,7 @@
   <section>
         <div id="title">
           <h1>Personal Thoughts</h1>
+          <h3><a href="http://mickywelther.github.io/index">Home            </a> <a href="http://mickywelther.github.io/education">Education           </a></h3>
   </div>
   <h2>June 7th, 2014</h2>
     <p>These past four years have been wonderful, and I leave the high school with no regrets. You are lucky to go to El Segundo High, 
