--- a/education.html
+++ b/education.html
@@ -19,6 +19,7 @@
   <section>
         <div id="title">
           <h1>Academic Background</h1>
+          <h3><a href="http://mickywelther.github.io/index">Home</a><a href="http://mickywelther/github.io/thoughts">Thoughts</a></h3>
   </div>
 
         <h2 name=HighSchool>
