--- a/thoughts.html
+++ b/thoughts.html
@@ -23,4 +23,16 @@
     and haters do not matter if you can love who you are and stay confident with your decisions. I am proud of how I've grown as a person, all 
     it took was opening my mind. My one big piece of advice: Don't ever demand gratitude or apologies, demand yourself. Thank you everyone for 
     having an influence on me in some way, small or large. You are truly wonderful, and I wish you all the best in your future ventures.</p>
+    
+      <div class=backimg>
+   <style>
+     div.backimg
+        {
+        position:fixed;
+        top:0px;
+        left:1px;
+         }
+   </style>
+      <img src="http://www.wallpapersweb.com/data/media/81/Peaceful%20Formations,%20Ocean%20Beach,%20California.jpg"/>
+    </div>
 </html>
