--- a/thoughts.html
+++ b/thoughts.html
@@ -31,6 +31,7 @@
         position:fixed;
         top:0px;
         left:1px;
+        z-index:-5;
          }
    </style>
       <img src="http://www.wallpapersweb.com/data/media/81/Peaceful%20Formations,%20Ocean%20Beach,%20California.jpg"/>
