--- a/thoughts.html
+++ b/thoughts.html
@@ -15,6 +15,7 @@
           <h1>Personal Thoughts</h1>
           <h3><a href="http://mickywelther.github.io/index">Home            </a> <a href="http://mickywelther.github.io/education">Education           </a></h3>
   </div>
+  <div style="background-color:#33CCFF;border:1px solid #33CCFF;padding:100px;">
   <h2>June 7th, 2014</h2>
     <p>These past four years have been wonderful, and I leave the high school with no regrets. You are lucky to go to El Segundo High, 
     if you hate this wonderful high school, then I advise you to take part in more activities, be open to other viewpoints, and don't be scared of 
@@ -23,6 +24,7 @@
     and haters do not matter if you can love who you are and stay confident with your decisions. I am proud of how I've grown as a person, all 
     it took was opening my mind. My one big piece of advice: Don't ever demand gratitude or apologies, demand yourself. Thank you everyone for 
     having an influence on me in some way, small or large. You are truly wonderful, and I wish you all the best in your future ventures.</p>
+  </div>
     
       <div class=backimg>
    <style>
