--- a/thoughts.html
+++ b/thoughts.html
@@ -12,7 +12,7 @@
   <div class="wrap">
   <section>
         <div id="title">
-         <div style="background-color:#FF69B4;border:1px dotted #33CCFF;padding:5px;">
+         <div style="background-color:#FF69B4;border:1px dashed #33CCFF;padding:5px;">
           <h1>Personal Thoughts</h1>
           <h3><a href="http://mickywelther.github.io/index">Home            </a> <a href="http://mickywelther.github.io/education">Education           </a></h3>
   </div>
