--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       div.seniorspot
         {
         position:absolute;
-        top:15px;
+        top:5px;
         right:5px;
          }
       </style>
@@ -83,6 +83,11 @@
    </style>  
     <marquee  behavior="scroll" direction="up">#YOLOSWAGMONEY360NOSCOPEPICKUP180GETREKT</marquee>
     </div>
+    <!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'skins/scmRed/skin.css','volume':61,'autoplay':true,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':true,'playlist':[{'title':'Best Friend - Foster the People','url':'http://www.youtube.com/watch?v=HoT7MPS8WDM'},{'title':'Kashmir - Led Zeppelin','url':'http://www.youtube.com/watch?v=nQH3LtNePgI'},{'title':'Sneaker Pimps - 6 Underground','url':'http://www.youtube.com/watch?v=2eBZqmL8ehg'},{'title':'The Stroke of Return - Big Data','url':'https://www.youtube.com/watch?v=r2Z36PnS2Pg'},{'title':'How Do You Sleep? - Jesse McCartney','url':'https://www.youtube.com/watch?v=PAA2-PaaOuQ'},{'title':'New Skin - Incubus','url':'https://www.youtube.com/watch?v=GS7X_q06L94'},{'title':'William, it was Really Nothing - The Smiths','url':'https://www.youtube.com/watch?v=kyIOOzinM6o'},{'title':'Dig - Incubus','url':'https://www.youtube.com/watch?v=nMsZ6wkZWhA'},{'title':'She%27s So High - Tal Bachman','url':'https://www.youtube.com/watch?v=_ElORM9O-0U'},{'title':'Sweet Emotion - Aerosmith','url':'https://www.youtube.com/watch?v=82cJgPXU-ik'},{'title':'Jeremy - Pearl Jam','url':'https://www.youtube.com/watch?v=OznWh_C_JDQ'},{'title':'Ordinary World - Duran Duran','url':'https://www.youtube.com/watch?v=dDLiVwpv89s'},{'title':'Come Undone - Duran Duran','url':'https://www.youtube.com/watch?v=ICnlyNUt_0o'},{'title':'Saved By Zero - The Fixx','url':'https://www.youtube.com/watch?v=euBzxXFEuA4'},{'title':'Floods - Fightstar','url':'https://www.youtube.com/watch?v=iTDmij0LlfY'},{'title':'Warning - Incubus','url':'https://www.youtube.com/watch?v=mPRRtJhEXOE'},{'title':'Oil and Water - Incubus','url':'https://www.youtube.com/watch?v=0uHsvLxu3GU'},{'title':'Stellar - Incubus','url':'https://www.youtube.com/watch?v=pKYGZxPF0yA'},{'title':'Latch - Disclosure','url':'https://www.youtube.com/watch?v=v7lzqD3wWyY'},{'title':'Mirrors - Justin Timberlake','url':'https://www.youtube.com/watch?v=uuZE_IRwLNI'},{'title':'Cry Me a River - Justin Timberlake','url':'https://www.youtube.com/watch?v=4DsPrEcvIvI'},{'title':'Burnin%27 Up - Jonas Brothers','url':'https://www.youtube.com/watch?v=XOwdqjDCKQA'},{'title':'We are the People - Empire of the Sun','url':'https://www.youtube.com/watch?v=3YN2lsrWN34'},{'title':'How Soon is Now? - The Smiths','url':'https://www.youtube.com/watch?v=hnpILIIo9ek'},{'title':'There is a Light that Never Goes Out - The Smiths','url':'https://www.youtube.com/watch?v=n-cD4oLk_D0'}]}" ></script>
+<!-- SCM Music Player script end -->
+    
   </body>
   
 
