--- a/thoughts.html
+++ b/thoughts.html
@@ -17,6 +17,29 @@
           <h3><a href="http://mickywelther.github.io/index">Home            </a> <a href="http://mickywelther.github.io/education">Education           </a></h3>
   </div>
   <div style="background-color:#005CE6;border:1px solid #33CCFF;padding:5px;">
+  <h2>July 19th, 2014</h2>
+    <p>So I got my first "real" job last month, and so far it's been pretty great and has got me thinking. I like working, keeping myself busy, and just being
+      useful. Hard work with adults is definitely different than what I considered hard work in high school. I've never demanded direct recognition when I worked hard,
+      however I always frustrated when I wouldn't see everyone pulling their ends or helping out to reach the common goal. I wanted to feel like we as a team had
+      a self-driven obligation, a sense of urgency that demanded ourselves rather than just others. That's what I enjoy about the people I work with; they all are driven and 
+      ready to get shit done. I sense vibes of energy from the whole room rather than just from individuals. Maybe I just had high expectations for the high schoolers I worked with or am "ahead of my
+      years" as Mr. Eno said, but it just makes my job feel worth it and myself feel productive and well-utilized when I'm working with a *team* for once rather than
+      a group that has to be pushed. Of course, I did not expect these people to be lazy, but this appreciation came to mind once I saw their workflow. Everyone's really cool 
+      though, and I do hope my future jobs have great groups of coworkers as these guys. ANOTHER SUPER AWESOME THING: Right before I wondered if they knew my Twitter account, so I said yolo and 
+      followed the organization on Twitter, and before I started working at the office they were sending me out super friendly Tweets and stuff and that was awesome and yeah. 
+      I'm proud that I get to extend my work period with them by another month, not only because of how unproductive I would be just hanging around for 7 weeks until college, but because these guys are a great group to work with.
+    </p>
+    <p>By the way, my friends and I think it's hilarious that I was basically the queen of social media at my school and now I'm working with it
+      at my job. I guess it was meant to be.
+    </p>
+    <p>Aside from work, I've been hanging around, getting college necessities, and editing this git site. I'm really excited to go to college, I've already found
+      my roommate, made the Mustang Band, and already have talked to some people who I think I can be good friends with. I'm super stoked that I already have 39 units
+      completed out of 180 because of LMU and AP crap, so my first semester I guess they decided to only give me 12 units? The great thing about the courses they gave me though
+      is that only one class seems pretty difficult: Calc IV. Other than that they gave me Writing and Rhetoric, and American and Californian Govt. Talking politics is my forte
+      and English should be easy considering I managed to write some A-grade essays in Lit without reading the books (AP Bullshit?). I was thinking of switching into Comp Sci my second
+      quarter, so I might take the beginner's Comp Sci course in a addition to my other courses so I don't have to shove it in next quarter. But yeah, super stoked for college.
+    </p>
+    <p>I guess I could just say life is good right now and hopefully about to get great.</p>
   <h2>June 7th, 2014</h2>
     <p>These past four years have been wonderful, and I leave the high school with no regrets. You are lucky to go to El Segundo High, 
     if you hate this wonderful high school, then I advise you to take part in more activities, be open to other viewpoints, and don't be scared of 
