--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section>
         <div id="title">
           <h1>Michaelynn Welther</h1>
-          <p>Freelance Tutor. Student. Beginning Web Developer.</p>
+          <p>Freelance Tutor. Student. Team Player.</p>
           <hr>
           <h4><a href="http://mickywelther.github.io/education">Education</a> <a href="http://mickywelther.github.io/thoughts">Thoughts</a></h4>
         </div>
@@ -36,9 +36,9 @@
         <h2>
 <a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About Me</h2>
 
-<p>As a California native with a determined mindset, embracing the idea of "work hard, play hard" comes naturally to me. I am a recent graduate of El Segundo High School, and will be attending Cal Poly, San Luis Obispo in the fall to study Applied Mathematics. I am a strong proponent of self-learning through initiative and experience. To encourage that ideal I have tutored elementary through college students, mentored for the Roller Coaster Project, and mentored middle school students in VEX robotics. </p>
-<p>When I'm done being a student/teacher for the day, you can find me napping, driving around LA with my friends, messing around in the robotics lab (or working on a robot/event), practicing trombone (rare though), checking my Facebook/Twitter/Email, or raiding my friends' pools. I manage to keep myself busy with something though, so the amount of free time I get can vary from none to some week to week. </p>
-<img id="pic1" src= "http://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-ash3/t1.0-9/602707_4189590653812_237154406_n.jpg"/>
+<p>As a California native with a determined mindset, embracing the idea of "work hard, play hard" comes naturally to me. I am a recent graduate of El Segundo High School, and will be attending Cal Poly, San Luis Obispo starting September 2014. I am a strong proponent of self-learning through initiative and experience. To encourage that ideal I have tutored elementary through college students, mentored for the Roller Coaster Project, and mentored middle school students in VEX robotics. </p>
+<p>When I'm done being a student/teacher for the day, you can find me napping, driving around LA with my friends, messing around in the robotics lab, practicing trombone (rare though), checking my Facebook/Twitter/Email, or raiding my friends' pools. I manage to keep myself busy with something though, so the amount of free time I get can vary from none to a little week to week. I guess you could say Productivity is my best friend.</p>
+<img id="pic1" src= "https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1374750_10200688230063913_1502789324_n.jpg"/>
   <!--<p class="caption">Working on the robot at the 2014 FRC LA Regional.</p>-->
 <img id="pic2" src= "http://37.media.tumblr.com/tumblr_m5mlt6a0EH1qhy6c9o1_400.gif"/>
   <!--<p class="caption">Now you know how I look like. OH NO YOU'LL BE ABLE TO FIND ME AAAAH.</p>-->
